// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderBarMenu test renders connected correctly 1`] = `
<vmenu-stub opendelay="0" closedelay="0" contentclass="menu-active-el" left="true" maxwidth="auto" nudgebottom="0" nudgeleft="0" nudgeright="0" nudgetop="0" nudgewidth="0" openonclick="true" closeonclick="true" closeoncontentclick="true" maxheight="auto" offsety="true" origin="top center" transition="scale-transition">
  <vlist-stub tag="div" tile="true" class="py-0 subtitle-1">
    <vlistitem-stub activeclass="" tag="div">
      <vlistitemcontent-stub>
        text1
      </vlistitemcontent-stub>
    </vlistitem-stub>
    <vlistitem-stub activeclass="" tag="div">
      <vlistitemcontent-stub>
        text2
      </vlistitemcontent-stub>
    </vlistitem-stub>
    <vlistitem-stub activeclass="" tag="div">
      <vicon-stub color="primary" class="mr-2">
        M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z
      </vicon-stub>

      Déconnexion
    </vlistitem-stub>
  </vlist-stub>
</vmenu-stub>
`;

exports[`HeaderBarMenu test renders not connected correctly 1`] = `
<vmenu-stub opendelay="0" closedelay="0" contentclass="menu-active-el" left="true" maxwidth="auto" nudgebottom="0" nudgeleft="0" nudgeright="0" nudgetop="0" nudgewidth="0" openonclick="true" closeonclick="true" closeoncontentclick="true" maxheight="auto" offsety="true" origin="top center" transition="scale-transition">
  <vlist-stub tag="div" tile="true" class="py-0 subtitle-1">
    <vlistitem-stub activeclass="" tag="div">
      <vlistitemcontent-stub>
        text1
      </vlistitemcontent-stub>
    </vlistitem-stub>
    <vlistitem-stub activeclass="" tag="div">
      <vlistitemcontent-stub>
        text2
      </vlistitemcontent-stub>
    </vlistitem-stub>
    <!---->
  </vlist-stub>
</vmenu-stub>
`;
